welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {
	if (weekday==false) {
		return true
	}
	if (vaction==true) {
		return true
	}
}
